# LBEAssimpAssetTest

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md
TestAssets/: cube.fbx
src/: main.cpp  meshexporter.cpp  meshexporter.h  meshimporter.cpp  meshimporter.h
